@@ -59,9 +59,9 @@
     </para>
 
     <para>
-      If <quote>LXQT_PREFIX = /usr</quote>, in order for the system to find
-      some files, run the following commands, as the <systemitem
-      class="username">root</systemitem> user:
+      If installed in /opt, in order for the system to find some files, run the
+      following commands, as the <systemitem class="username">root</systemitem>
+      user:
     </para>
 
 <screen role="root"><userinput>ln -svfn $LXQT_PREFIX/share/lxqt /usr/share/lxqt &amp;&amp;
