@@ -6,7 +6,7 @@
 
   <!ENTITY xterm-download-http " ">
   <!ENTITY xterm-download-ftp  "ftp://invisible-island.net/xterm/xterm-&xterm-version;.tgz">
-  <!ENTITY xterm-md5sum        "0.4 SBU (without tests)">
+  <!ENTITY xterm-md5sum        "75a09e46f01405b4b569913b2c03082f">
   <!ENTITY xterm-size          "1.2 MB">
   <!ENTITY xterm-buildsize     "15 MB">
   <!ENTITY xterm-time          "0.1 SBU">
